--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,7 +18,7 @@ body, html{
 
 main{
     height: 100vh;
-    position: relative; 
+    position: relative;     
 }
 
 #telefone{
@@ -34,3 +34,10 @@ main{
     transform: translate( -50%, -50%);
 }
 
+#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 473px;
+}
