--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,3 +41,24 @@ main{
     width: 269px;
     height: 473px;
 }
+
+section#redes-sociais > a > img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    cursor: pointer;
+    box-shadow:  2px 2px  5px rgba(0, 0, 0, 0.397);
+    transition: 0.8s;
+}
+
+#redes-sociais{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding: 30px;
+}
+
+#redes-sociais > a >img:hover{
+    transform: scale(1.1);
+}
